--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<link href='http://fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext,cyrillic,cyrillic-ext' rel='stylesheet' type='text/css'>
 	<script src="http://code.jquery.com/jquery-latest.min.js"></script>
 	<script src="js/app.js"></script>
+	<script type="text/javascript" src="path/to/instafeed.min.js"></script>
 </head>
 <body>
 	<div class="page">
