changed tag to tbt

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>Instagram APi</title>
 	<script type="text/javascript" src="js/instafeed.min.js"></script>
 </head>
 <body>
@@ -11,7 +11,7 @@
 	<script type="text/javascript">
     var feed = new Instafeed({
         get: 'tagged',
-        tagName: 'awesome',
+        tagName: 'tbts',
         clientId: '48ec655b29f847998fc3b41a85569636'
     });
     feed.run();
