--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 	<script type="text/javascript" src="js/instafeed.min.js"></script>
 </head>
 <body>
-	<div id="instafeed">Throw Back Thursday</div>
+	<h1> Throw Back Thursday </h1>
+	<div id="instafeed"></div>
 
 	<script type="text/javascript">
     var feed = new Instafeed({
