--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Instagram TBT</title>
+	<title>Instagram Throwback</title>
 	<link rel="stylesheet" type="text/css" href="stylesheet/main.css">
 	<link href='http://fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext,cyrillic,cyrillic-ext' rel='stylesheet' type='text/css'>
+	<script src="js/app.js"></script>
+	<script src="http://code.jquery.com/jquery-latest.min.js"></script>
 	<script type="text/javascript" src="js/instafeed.min.js"></script>
 </head>
 <body>
