--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	<script type="text/javascript">
     var feed = new Instafeed({
         get: 'tagged',
-        tagName: 'tbts',
+        tagName: 'tbt',
         clientId: '48ec655b29f847998fc3b41a85569636'
     });
     feed.run();
