--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<script type="text/javascript">
     var feed = new Instafeed({
         get: 'tagged',
-        tagName: 'tbt',
+        tagName: 'tbt', 'throwback',
         clientId: '48ec655b29f847998fc3b41a85569636'
     });
     feed.run();
