images file revert

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		<div class="disclaimer">
 			<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe, architecto incidunt nesciunt exercitationem quia sed repellendus et fugiat delectus quos. Architecto, nam, dolorum velit id voluptates est eius eaque quae.</p>
 		</div>
-		<div class="instagram"><a href="http://instagram.com/"target="_blank"><img id="insta" src="../images/instagram.png" title="Instagram.com"></a>
+		<div class="instagram"><a href="http://instagram.com/"target="_blank"><img id="insta" src="images/instagram.png" title="Instagram.com"></a>
 		</div>
 	</div>
 </body>
