--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Instagram TBT</title>
 	<link rel="stylesheet" type="text/css" href="stylesheet/main.css">
+	<link rel="stylesheet" type="text/css" href="stylesheet/reset.css">
 	<link href='http://fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext,cyrillic,cyrillic-ext' rel='stylesheet' type='text/css'>
 	<script src="http://code.jquery.com/jquery-latest.min.js"></script>
 	<script src="js/app.js"></script>
